# OnlineJudge

./: .dockerignore  API.md  CMakeLists.txt  README.md  bug.md  cache.md  config.in.h  plan.md  plan.txt
.sisyphus/: boulder.json
.sisyphus/drafts/: bug-fix-v2.md  dev-doc.md  project-highlights.md
Logger/: CMakeLists.txt  logstrategy.h  logstrategy.hpp
Logger/Logger/: logstrategy.h
Logger/include/: logstrategy.h
Logger/output/include/: logstrategy.h
Logger/output/lib/: libLogger.so.1  libLogger.so.1.0.0
Logger/src/: logstrategy.cpp
build-asan/: CMakeCache.txt  Makefile  cmake_install.cmake
comm/: comm.hpp  lock.hpp  logstrategy.hpp
compile_server/: COP_hanlder.hpp  compile_server  compile_server.cpp  compiler.hpp  entry  entry.cpp  entry.hpp  judge.hpp  makefile  preprocesser.hpp  runner.hpp  test
conf/: gateway.conf
docker/: Dockerfile.compiler  Dockerfile.judge  Dockerfile.oj_admin  Dockerfile.oj_server  Dockerfile.openresty  Dockerfile.openresty.dockerignore  Dockerfile.runner  Dockerfile.sandbox  compose.dev.env  dev-gateway-auth-token  docker-compose.yml
docs/: c2-benchmark-report.md  page-performance-checklist.md  question-write-api.md  redis-cache-spec.md
gateway/: nginx.conf  routes.lua
oj_server/: makefile  oj_control.hpp  oj_model.hpp  oj_server  oj_server.cpp  oj_view.hpp
output/: compile_server  concurrency_bench  oj_admin  oj_log  oj_server  verify_log_output
scripts/: apply_migrations.sh  build_container_artifacts.sh  generate_gateway_descriptor.sh
sql/: admin_accounts.sql  admin_audit_logs.sql  base_schema.sql  cache_metrics_snapshots.sql  comment_actions.sql  judge_tasks.sql  questions.sql  solution_actions.sql  solution_comments.sql  solutions.sql  tests.sql  user_submits.sql  users.sql
src/comm/: es.hpp  (+10 more)
src/comm/models/: CMakeLists.txt  admin.hxx  admin_audit_log.hxx  cache_metrics_snapshot.hxx  comment.hxx  comment_action.hxx  judge_outbox.hxx  judge_result_receipt.hxx  judge_task.hxx  legacy_submission.hxx  model_counts.hxx  odb_models.hpp  question.hxx  solution.hxx  solution_action.hxx  submission.hxx  test_case.hxx  types.hxx  user.hxx
src/compile_server/: CMakeLists.txt
src/compile_server/include/: COP_hanlder.hpp  compiler.hpp  entry.hpp  judge.hpp  preprocesser.hpp  runner.hpp
src/compile_server/src/: compile_server.cpp  custom_flag.cpp
src/gateway/: CMakeLists.txt  main.cpp
src/gateway/include/: json_converter.hpp  jwt_middleware.hpp  rate_limiter.hpp  router.hpp
src/gateway/src/: json_converter.cpp  jwt_brpc.cpp  jwt_middleware.cpp  rate_limiter.cpp  router.cpp
src/judge_service/: CMakeLists.txt  main.cpp
src/judge_service/include/: docker_sandbox.hpp  docker_work_done_service.hpp  event_loop.hpp  judge_delivery_policy.hpp  judge_inbox.hpp  judge_worker.hpp  judger.hpp  mq_consumer.hpp  report_decision.hpp  result_reporter.hpp
src/judge_service/include/async/: docker_task_awaitable.hpp  event_loop.hpp  pending_task_manager.hpp  task.hpp
src/judge_service/include/pipeline/: compiler.hpp  entry.hpp  handler_base.hpp  judge.hpp  preprocesser.hpp  runner.hpp
src/judge_service/include/sandbox/: docker_sandbox.hpp
src/oj_server/: CMakeLists.txt
src/oj_server/include/: control_auth.hpp  control_base.hpp  control_comment.hpp  control_question.hpp  control_solution.hpp  model_base.hpp  model_comment.hpp  model_solution.hpp  model_user.hpp  oj_admin.hpp  oj_cache.hpp  oj_control.hpp  oj_mail.hpp  oj_model.hpp  oj_session.hpp  oj_util.hpp  oj_view.hpp
src/oj_server/include/control/: control_auth.hpp  control_base.hpp  control_comment.hpp  control_question.hpp  control_solution.hpp  control_user.hpp  oj_control.hpp
src/oj_server/include/judge/: outbox_publisher.hpp
src/oj_server/include/model/: model_base.hpp  model_comment.hpp  model_context.hpp  model_question.hpp  model_solution.hpp  model_submission.hpp  model_user.hpp  oj_model.hpp
src/oj_server/include/rpc/: admin_audit_worker.hpp  async_dispatch.hpp  oj_admin_service_impl.hpp  oj_service_impl.hpp  proto_adapter.hpp  session_adapter.hpp  static_http_service.hpp
src/oj_server/include/runtime/: application_context.hpp  business_executor.hpp
src/oj_server/src/: oj_admin.cpp  oj_server.cpp
src/oj_server/src/judge/: outbox_publisher.cpp
src/oj_server/src/rpc/: admin_audit_worker.cpp  oj_admin_service_impl.cpp  oj_service_impl.cpp  static_http_service.cpp
src/oj_server/src/runtime/: application_context.cpp  business_executor.cpp
test/: CMakeLists.txt  comm.hpp  concurrency_bench.cpp  direct_e2e_test.cpp  dos  dos.cpp  judge_event_loop_test.cpp  judge_inbox_test.cpp  judge_integration_test.cpp  latency_monitor_test.cpp  logger_test.cpp  makefile  odb_connection_pool_test.cpp  odb_model_mapping_test.cpp  proto_contract_test.cpp  sql  sql.cpp  test  test.cpp  test_docker_sandbox.cpp  test_judge_pipeline.cpp  test_jwt.cpp  test_mq.cpp  test_mq_consumer.cpp  test_odb_pool.cpp  verify_log_output.cpp  xss.cpp
test/frontend/: proto-generation.test.mjs  protobuf-rpc-client.test.mjs
test/gateway/: _contracts.py  codec_test.lua  conftest.py  descriptor_contract_test.py  json_gateway_e2e_test.py  network_policy_test.py  route_contract_test.py  security_test.py  upstream_boundary_test.py
test/judge/: judge_delivery_test.cpp  mq_delivery_integration_test.cpp  result_callback_test.cpp  submission_rpc_test.cpp
test/model/: model_admin_odb_test.cpp  model_comment_odb_test.cpp  model_question_odb_test.cpp  model_solution_odb_test.cpp  model_user_odb_test.cpp
test/oj_server/: CMakeLists.txt  admin_contract_test.cpp  application_context_test.cpp  auth_session_security_test.cpp  brpc_adapter_test.cpp  contract_test_support.hpp  data_query_regression_test.cpp  legacy_contract_manifest.hpp  legacy_contract_test.cpp  oj_admin_service_rpc_test.cpp  oj_service_rpc_test.cpp  outbox_publisher_test.cpp  static_file_service_test.cpp  submission_persistence_test.cpp
test/performance/: mysql_cleanup.sql  mysql_seed.sql
tmp/: 1777708224978_1.stderr  1777708231289_2.stderr  1777717786073_1.stderr  1777717793039_2.stderr
tools/: c2_benchmark_compare.sh
(+143 files in other folders)
