# 编译服务器的 CMakeLists.txt

# 添加可执行程序
#add_executable(compile_server src/compile_server.cpp)

# 包含头文件目录
#target_include_directories(compile_server PRIVATE ${CMAKE_SOURCE_DIR}/src/compile_server/include)

# 链接库
#target_link_libraries(compile_server PRIVATE pthread mysqlclient jsoncpp ctemplate cpp-httplib Logger)